# doltpy

./: .gitignore  README.md  noxfile.py  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: build.yaml  build2.yaml  conda.yml  conda_publish.yaml  main.yml  publish.yaml  release-notify.yaml
conda/: meta.yaml
docs/: conf.py  doltpy.rst  doltpy.shared.rst  doltpy.sql.rst  doltpy.sql.sync.rst  doltpy.types.rst  modules.rst
doltpy/: __init__.py  dolt.py
doltpy/cli/: __init__.py  dolt.py  helpers.py  read.py  write.py
doltpy/core/: __init__.py  dolt.py  system_helpers.py
doltpy/doltpy_etl/: cli_logging_config_helper.py  dolt_loader.py  dolthub_loader.py  loaders.py
doltpy/etl/: __init__.py  cli_logging_config_helper.py  dolt_loader.py  dolthub_loader.py  loaders.py  wrappers.py
doltpy/shared/: __init__.py  helpers.py  system_helpers.py
doltpy/source/: conf.py  index.rst
doltpy/sql/: __init__.py  helpers.py  read.py  schema_tools.py  sql.py  write.py
doltpy/tests/: dolt_testing_fixtures.py  test_dolt.py
doltpy/types/: __init__.py  dolt.py
doltpy_etl/: __init__.py  dolt_loader.py  dolthub_loader.py  helpers.py  loaders.py  tools.py
doltpy_etl/tests/: test_tools.py
etl/: tools.py
etl/tests/: test_tools.py
scripts/: docgen.sh  release.sh  run_tests.sh
tests/: conftest.py
tests/cli/: __init__.py  helpers.py  test_dolt.py  test_read.py  test_write.py
tests/cli-read/: test_read.py
tests/etl/: test_tools.py
tests/sql/: helpers.py  (+3 more)
tests/sql-sync/: conftest.py  test_postgres.py  test_sql_schema_sync.py  test_sql_sync.py
(+155 files in other folders)
