[tool.poetry]
name = "doltpy"
version = "2.0.9"
description = "A Python package for using Dolt database via Python."
authors = ["Oscar Batori <oscar@dolthub.com>", "Max Hoffman <max@dolthub.com>"]
readme = "README.md"
homepage = "https://github.com/dolthub/doltpy"
keywords = ["Dolt", "Liquidata", "DoltHub", "ETL", "ELT", "MLOps"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
attrs = "19.3.0"
decorator = "4.4.2"
numpy = "1.19.0"
packaging = "20.4"
pandas = ">=1.0.5"
pluggy = "0.13.1"
protobuf = "3.12.2"
psutil = "5.7.2"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
pytz = "2020.1"
retry = "0.9.2"
six = "1.15.0"
SQLAlchemy = "1.3.18"
wcwidth = "0.2.5"
more-itertools = "^8.6.0"
mysql-connector-python = "^8.0.20"
doltcli = "^0.1.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
nox = "^2020.12.31"
psycopg2-binary = "2.8.5"
cx-Oracle = ">=8.0.1"
mysql-connector-python = "8.0.20"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-docker = "^0.10.1"
pytest-cov = "^2.11.1"
hypothesis = "^6.7.0"

[tool.poetry.extras]
pg = ["psycopg2-binary"]
oracle = ["cx-oracle"]

[tool.poetry.scripts]
"dolthub-load" = "doltpy.etl:dolthub_loader_main"
"dolt-load" = "doltpy.etl:dolt_loader_main"

[tool.pytest.ini_options]
markers = [
    "sql_sync: SQL: tests",
    "slow"
]

[tool.black]
line-length = 120

[mypy]
python_version = "2.0.9"

[mypy-doltpy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
